# Stock_Market_Data_Pipeline

./: LICENSE  config.yml  daily_dump.py  historical_dump.py  pyproject.toml  readme.md  sql_queries.txt  utils.py
